--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
                 </div>
                 <div class="about-text">
                     <h2>Quem é Hiago Marcelo?</h2>
-                    <p>Fundador da <strong>CLIX</strong>, especialista em tráfego pago focado em ROI.</p>
+                    <p>Marido, pai, Policial Militar, fundador e CEO da <strong>CLIX</strong>.</p>
+                    <p>Especialista em alavancagem de empresas por meio da internet, ajudo negócios a venderem mais com qualidade, estratégia e simplicidade, utilizando soluções digitais eficientes e escaláveis.</p>
                     <p>Meu objetivo é fazer sua empresa vender mais através da internet com previsibilidade.</p>
                 </div>
             </div>
@@ -350,4 +351,5 @@
         });
     </script>
 </body>
+
 </html>
