--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
         .form-group label { display: block; margin-bottom: 5px; color: var(--text-main); }
         .form-group input::placeholder, .form-group select::placeholder { color: #666; }
         .form-group input, .form-group select { width: 100%; padding: 12px; background-color: #121214; border: 1px solid #444; color: white; border-radius: 5px; margin-bottom: 20px; }
-        .btn-submit { width: 100%; padding: 15px; background-color: var(--secondary-color); color: white; border: none; border-radius: 5px; font-size: 18px; font-weight: bold; cursor: pointer; }
+        .btn-submit { width: 100%; padding: 15px; background-color: var(--secondary-color); color: white; border: none; border-radius: 5px; font-size: 18px; font-weight: bold; cursor: pointer; transition: 0.3s; }
+        .btn-submit:hover { background-color: #005cb2; }
         footer { background-color: #000; color: #555; text-align: center; padding: 30px 0; }
 
         /* --- RESPONSIVIDADE (CELULAR) --- */
@@ -325,25 +326,25 @@
                 <form id="contactForm">
                     <div class="form-group">
                         <label>Nome Completo</label>
-                        <input type="text" placeholder="Ex: João Silva" required>
+                        <input type="text" id="nome" placeholder="Ex: João Silva" required>
                     </div>
                     <div class="form-group">
                         <label>Email Corporativo</label>
-                        <input type="email" placeholder="Ex: joao@empresa.com.br" required>
+                         <input type="email" id="email" placeholder="Ex: joao@empresa.com.br" required>
                     </div>
                     <div class="form-group">
                         <label>WhatsApp</label>
-                        <input type="tel" placeholder="Ex: (11) 99999-9999" required>
+                         <input type="tel" id="wpp" placeholder="Ex: (11) 99999-9999" required>
                     </div>
                     <div class="form-group">
                         <label>Verba Mensal</label>
-                        <select>
+                         <select id="verba">
                             <option>R$ 1.000 a R$ 5.000</option>
                             <option>R$ 5.000 a R$ 15.000</option>
                             <option>Acima de R$ 15.000</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn-submit">ENVIAR</button>
+                    <button type="submit" class="btn-submit">ENVIAR PROPOSTA</button>
                 </form>
             </div>
         </div>
@@ -364,27 +365,46 @@
             });
         });
 
-        // Formulário
+        // --- LÓGICA DO WHATSAPP ATUALIZADA ---
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             e.preventDefault();
-            alert('Recebemos seus dados! Entraremos em contato em breve.');
+
+            // ⚠️ COLOQUE SEU NÚMERO AQUI (Código do País + DDD + Numero)
+            // Exemplo: "5511999998888"
+            var telefoneDestino = "5511993968524"; 
+
+            // Pega os dados dos campos pelos IDs
+            var nome = document.getElementById('nome').value;
+            var email = document.getElementById('email').value;
+            var wpp = document.getElementById('wpp').value;
+            var verba = document.getElementById('verba').value;
+
+            // Monta a mensagem
+            var mensagem = "*Nova Solicitação do Site CLIX* 🚀\n\n";
+            mensagem += "👤 *Nome:* " + nome + "\n";
+            mensagem += "📧 *Email:* " + email + "\n";
+            mensagem += "📱 *Zap do Cliente:* " + wpp + "\n";
+            mensagem += "💰 *Verba:* " + verba + "\n\n";
+            mensagem += "Gostaria de uma análise para minha empresa.";
+
+            // Abre o WhatsApp
+            var linkZap = "https://wa.me/" + telefoneDestino + "?text=" + encodeURIComponent(mensagem);
+            window.open(linkZap, '_blank');
         });
 
-        // --- LÓGICA DO CONTADOR (Começando do valor que está no HTML) ---
+        // --- LÓGICA DO CONTADOR ---
         const counters = document.querySelectorAll('.counter');
-        const speed = 200; // Ajuste para mais rápido ou devagar
+        const speed = 200; 
 
         const animateCounters = () => {
             counters.forEach(counter => {
                 const updateCount = () => {
                     const target = +counter.getAttribute('data-target');
-                    // Lê o número atual (ex: 500.000) removendo os pontos
                     const count = +counter.innerText.replace(/\./g, ''); 
                     
                     const inc = target / speed;
 
                     if (count < target) {
-                        // Formata para ter os pontos (milhar)
                         counter.innerText = Math.ceil(count + inc).toLocaleString('pt-BR');
                         setTimeout(updateCount, 20);
                     } else {
@@ -395,7 +415,6 @@
             });
         };
 
-        // Só ativa o contador quando a seção aparece na tela (Observer)
         let ranOnce = false;
         const sectionObserver = new IntersectionObserver(function(entries) {
             if(entries[0].isIntersecting && !ranOnce){
